# osparc-lab-ci-travis-trial

./: .travis.yml  CMakeLists.txt  README.md
Package1/: CMakeLists.txt  test1.py
Package1/Module1/: __init__.py
Package2/: CMakeLists.txt  test2.py
Package3/: CMakeLists.txt  test3.py
Package4/: CMakeLists.txt  test4.py
