PROJECT( TestingViaCTest )

CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

ENABLE_TESTING()

ADD_SUBDIRECTORY( Package1 )
ADD_SUBDIRECTORY( Package2 )
ADD_SUBDIRECTORY( Package3 )
ADD_SUBDIRECTORY( Package4 )

SET( PEP8_SCRIPT_NAME ${CMAKE_CURRENT_BINARY_DIR}/check_pep8.sh )
FILE( WRITE ${PEP8_SCRIPT_NAME} "find . -iname \"*.py\" | xargs pylint" )
ADD_TEST( NAME PythonOverallPep8
	COMMAND chmod u+x ${PEP8_SCRIPT_NAME}
	COMMAND ${PEP8_SCRIPT_NAME}
)
